[project]
name = "web-search-chat-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=1.11.1",
    "langchain>=0.3.18",
    "langchain-google-genai>=2.0.9",
    "langchain-groq>=0.2.4",
    "numpy==1.26.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
]
